package behavioral.observer.bt1;

public interface MyStreamListener<T> {
    void listen(T t);
}
